--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,22 @@
     <link rel="icon" href="{{"/images/favicon.ico"|relative_url}}" />
 
     <!-- Bootstrap -->
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!--
     <link href="{{ "/css/bootstrap.min.css" | relative_url }}" rel="stylesheet">
+-->
     <link href="{{ "/css/style.css" | relative_url }}" rel="stylesheet">
+
+
     <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Open+Sans+Condensed:300,700">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -68,26 +79,30 @@
 <!--
                 <li><a href="{{ "/services.html" | relative_url }}">Services</a></li>
 -->
-                <li><a href="{{ "/wetribu.html"| relative_url }}">WeTribu</a></li>
-                <li><a href="{{"/mission.html" | relative_url }}">Mission</a></li>
+                <li><a href="{{ "/wetribu.html"| relative_url }}"> La WeTribu</a></li>
+                <li><a href="{{"/mission.html" | relative_url }}">Notre Mission</a></li>
                 <!--<li><a href="{{"/expertises.html" | relative_url }}">Expertises</a></li>-->
-                <li><a href="http://blog.wescale.fr/">Blog</a></li>
+
                 <li><a href="{{ "/contact.html"| relative_url }}">Nous contacter</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+                <li><a href="http://blog.wescale.fr/">Le Blog</a></li>
                 <li class="socials">
-                    <a href="https://twitter.com/yeswescale" title="Twitter"><i class="fa fa-twitter"
+                    <a href="https://twitter.com/yeswescale" title="Twitter"><i class="fab fa-twitter"
                                                                                 aria-hidden="true"></i></a>
                 </li>
                  <li class="socials">
-                    <a href="https://www.linkedin.com/company/wescale" title="Linkedin"><i class="fa fa-linkedin"
+                    <a href="https://www.linkedin.com/company/wescale" title="Linkedin"><i class="fab fa-linkedin"
                                                                                            aria-hidden="true"></i></a>
                      </li>
                 <li class="socials">
-                    <a href="https://github.com/WeScale" title="Github"><i class="fa fa-github"></i></a>
+                    <a href="https://github.com/WeScale" title="Github"><i class="fab fa-github"></i></a>
                     </li>
                 <li class="socials">
-                    <a href="https://speakerdeck.com/wescale" title="Speaker Deck"><i class="fa fa-slideshare"></i></a>
+                    <a href="https://www.youtube.com/channel/UCd7ev5W374BxUDlMPXDdDnA" title="WeScale TV"><i class="fab fa-youtube"></i></a>
+                    </li>
+                <li class="socials">
+                    <a href="https://speakerdeck.com/wescale" title="Speaker Deck"><i class="fab fa-slideshare"></i></a>
                 </li>
             </ul>
         </div>
