--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="{{"/"| relative_url }}"><img src="{{ "/images/logo.png" | relative_url }}"
-            alt="Wescale - Cloud Expert logo" width="148" height="58" /></a>
+            alt="WeScale - Cloud Expert logo" width="148" height="58" /></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -126,7 +126,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-lg-4 col-md-4">
                         <div id="map-legend">
-                            <h3>Wescale</h3>
+                            <h3>WeScale</h3>
                             <p>23 rue Taitbout<br/>75009 Paris</a></p>
                             <p><img src="{{ "/images/metro.jpg" | relative_url }}" width="25px" height="17px"/> Chaussée d'Antin Lafayette, Auber, Richelieu - Drouot, Opéra</p>
                         </div>
@@ -159,7 +159,7 @@
 <script src="{{"/js/notify.min.js" | relative_url}}"></script>
 <script type = "text/javascript">
 if (typeof jQuery === 'undefined') {
-    throw new Error('Wescale\'s JavaScript requires jQuery')
+    throw new Error('WeScale\'s JavaScript requires jQuery')
 }
 
 +function ($) {
@@ -224,7 +224,7 @@ if (typeof jQuery === 'undefined') {
             mapTypeId: MY_MAPTYPE_ID
         };
         window.map = new google.maps.Map(document.getElementById("google_map"), t);
-        var r = {name: "Wescale Style"};
+        var r = {name: "WeScale Style"};
         var i = new google.maps.StyledMapType(e, r);
         window.map.mapTypes.set(MY_MAPTYPE_ID, i);
         var s = new google.maps.Marker({
