--- a/_layouts/formation.html
+++ b/_layouts/formation.html
@@ -6,7 +6,7 @@ layout: default
       <section>
         <div class="container">
           <div class="row">
-            <div class="col-md-9">
+            <div class="col-md-9 white-content">
                 <h4><a href="{{"/formations.html"| relative_url}}">Formations</a> &gt; {{page.title}} </h4>
 {{ content }}
             </div>
