--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ h4 {
 .title, .formation h1 {
     text-align: left;
     color: #00a89e;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     font-size: 2.5em;
     border-bottom: 1px solid #00a89e;
 }
@@ -498,12 +498,12 @@ img {
 .home-top .up-title {
     font-family: 'Open Sans Condensed', sans-serif;
     text-transform: uppercase;
-    font-size: 30px;
+    font-size: 3em;
     font-weight: 200;
 }
 
  .home-top .title {
-    font-size: 50px;
+    font-size: 3em;
     font-weight: bold;
     color: white;
     /*margin: 20px 0 20px;*/
@@ -553,7 +553,7 @@ img {
 .home-content {
     position: relative;
     padding: 10px 15px 50px 15px;
-    margin-top: 12%;
+    margin-top: 5em;
 }
 
 .partenariats .home-content {
@@ -720,7 +720,7 @@ img {
 }
 
 .techtrends-title h2 {
-    font-size: 50px;
+    font-size: 3em;
 }
 
 .techtrends-title p {
@@ -742,6 +742,7 @@ img {
     -o-box-shadow: 0px 0px 20px 0px #000000;
     box-shadow: 0px 0px 20px 0px #000000;
     filter: progid:DXImageTransform.Microsoft.Shadow(color=#000000, Direction=NaN, Strength=20);
+    margin-bottom: 1em;
 }
 
 .techtrends-image,
@@ -1299,7 +1300,7 @@ a.job-button:hover, input[type="submit"].hs-button:hover {
     font-family: 'Open Sans Condensed', sans-serif;
     text-transform: uppercase;
     text-align: center;
-    font-size: 20px;
+    font-size: 1.3em;
     margin: 50px 0 0;
 }
 
@@ -1309,7 +1310,7 @@ a.job-button:hover, input[type="submit"].hs-button:hover {
 
 .home .more a, .mission-top .more a, .job .more a {
     color: white;
-    font-size: 20px;
+    font-size: 1.3em;
 }
 
 /** FOOTER **/
