--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,13 +88,13 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="http://blog.wescale.fr/">Le Blog</a></li>
                 <li class="socials">
-                    <a href="https://twitter.com/yeswescale" title="Twitter"><i class="fab fa-twitter"
+                    <a href="https://twitter.com/yeswescale" title="Twitter" target="_blank"><i class="fab fa-twitter"
                                                                                 aria-hidden="true"></i></a>
-                    <a href="https://www.linkedin.com/company/wescale" title="Linkedin"><i class="fab fa-linkedin"
+                    <a href="https://www.linkedin.com/company/wescale" title="Linkedin" target="_blank"><i class="fab fa-linkedin"
                                                                                            aria-hidden="true"></i></a>
-                    <a href="https://github.com/WeScale" title="Github"><i class="fab fa-github"></i></a>
-                    <a href="https://www.youtube.com/channel/UCd7ev5W374BxUDlMPXDdDnA" title="WeScale TV"><i class="fab fa-youtube"></i></a>
-                    <a href="https://speakerdeck.com/wescale" title="Speaker Deck"><i class="fab fa-slideshare"></i></a>
+                    <a href="https://github.com/WeScale" title="Github" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://www.youtube.com/channel/UCd7ev5W374BxUDlMPXDdDnA" title="WeScale TV" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="https://speakerdeck.com/wescale" title="Speaker Deck" target="_blank"><i class="fab fa-slideshare"></i></a>
                 </li>
             </ul>
         </div>
