--- a/css/style.css
+++ b/css/style.css
@@ -1080,14 +1080,14 @@ div.equipe-name h3 {
 
 a.job-button, input[type="submit"].hs-button {
     font-family: 'Open Sans Condensed', sans-serif;
-    background: #567997;
+    background: #f59c27;
     color: white;
     font-size: 1.9em;
     display: inline-block;
     line-height: 35px;
     margin: 10px 0;
     padding: 0 5px;
-    border: 1px solid #567997;
+    border: 1px solid #f59c27;
     font-weight: bolder;
     text-decoration: none;
     -webkit-border-radius: 5px;
@@ -1108,8 +1108,8 @@ a.job-button, input[type="submit"].hs-button {
 }
 
 a.job-button:hover, input[type="submit"].hs-button:hover {
-    background: #6694bb;
-    border: 1px solid #6694bb;
+    background: #fdbc67;
+    border: 1px solid #f59c27;
 }
 
 .job-family {
