Add confidential policy to default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -140,7 +140,8 @@
 
 
     <p class="footer-bottom">Copyright WeScale SAS | <a href="//info.wescale.fr/politique-relative-aux-cookies">Politique de Cookies</a> | <a
-            href="{{ "/mentions.html" | relative_url }}">Mentions légales</a></p>
+            href="{{ "/mentions.html" | relative_url }}">Mentions légales</a> | <a href="//info.wescale.fr/politique-de-confidentialite">Confidentialité</a>
+    </p>
 </footer>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="{{"/js/gallery.js" | relative_url}}"></script>
