Try With Nantes Address

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -116,6 +116,7 @@
 
             <div class="container map-legend-container">
                 <div class="row">
+
                     <div class="col-xs-12 col-lg-4 col-md-4">
                         <div id="map-legend">
                             <h3>WeScale</h3>
@@ -123,18 +124,33 @@
                             <p><img src="{{ "/images/metro.jpg" | relative_url }}" width="25px" height="17px"/> Chaussée d'Antin Lafayette, Auber, Richelieu - Drouot, Opéra</p>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="footer-wrapper-top">
-        <div class="footer-top">
-            <a href="#" class="to-maps"><i class="fa fa-globe fa-2x"></i><br/> 23 rue Taitbout, 75009 Paris</a>
-        </div>
+    <div class="footer-wrapper-top container">
+        <div class="row">
+            <div class="col-xs-6 col-lg-6 col-md-6">
+                <div class="footer-top">
+                    <a href="#" class="to-maps"><i class="fa fa-globe fa-2x"></i><br/> 23 rue Taitbout, 75009 Paris</a>
+                </div>
 
-        <div class="footer-contact">
-            <a href="mailto:contact@wescale.fr">contact@wescale.fr</a>
+            </div>
+            <div class="col-xs-6 col-lg-6 col-md-6">
+                <div class="footer-top">
+                    <a href="#" class="to-maps"><i class="fa fa-globe fa-2x"></i><br/> 9 Rue du Chapeau Rouge, 44000 Nantes</a>
+                </div>
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+             <div class="footer-contact">
+                    <a href="mailto:contact@wescale.fr">contact@wescale.fr</a>
+                </div>
+            </div>
         </div>
     </div>
 
