Fix footer layer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -130,7 +130,8 @@
         </div>
     </div>
 
-    <div class="footer-wrapper-top container">
+    <div class="footer-wrapper-top">
+        <div class="container">
         <div class="row">
             <div class="col-xs-6 col-lg-6 col-md-6">
                 <div class="footer-top">
@@ -151,6 +152,7 @@
                     <a href="mailto:contact@wescale.fr">contact@wescale.fr</a>
                 </div>
             </div>
+        </div>
         </div>
     </div>
 
