Fix footer layer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -135,13 +135,17 @@
         <div class="row">
             <div class="col-xs-6 col-lg-6 col-md-6">
                 <div class="footer-top">
-                    <a href="#" class="to-maps"><i class="fa fa-globe fa-2x"></i><br/> 23 rue Taitbout, 75009 Paris</a>
+                    <a href="#" class="to-maps">
+                        <img src="{{"/images/pictos/PICTO-PARIS-02.png"| relative_url}}"/>
+                        <br/> 23 rue Taitbout, 75009 Paris</a>
                 </div>
 
             </div>
             <div class="col-xs-6 col-lg-6 col-md-6">
                 <div class="footer-top">
-                    <a href="#" class="to-maps"><i class="fa fa-globe fa-2x"></i><br/> 9 Rue du Chapeau Rouge, 44000 Nantes</a>
+                    <a href="#" class="to-maps">
+                        <img src="{{"/images/pictos/PICTO-NANTES-01.png"| relative_url}}"/>
+                        <br/> 9 Rue du Chapeau Rouge, 44000 Nantes</a>
                 </div>
 
             </div>
