Fix size of footer pictos

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,7 +136,7 @@
             <div class="col-xs-6 col-lg-6 col-md-6">
                 <div class="footer-top">
                     <a href="#" class="to-maps">
-                        <img src="{{"/images/pictos/PICTO-PARIS-02.png"| relative_url}}"/>
+                        <img src="{{"/images/pictos/PICTO-PARIS-02.png"| relative_url}}" height="17px"/>
                         <br/> 23 rue Taitbout, 75009 Paris</a>
                 </div>
 
@@ -144,7 +144,7 @@
             <div class="col-xs-6 col-lg-6 col-md-6">
                 <div class="footer-top">
                     <a href="#" class="to-maps">
-                        <img src="{{"/images/pictos/PICTO-NANTES-01.png"| relative_url}}"/>
+                        <img src="{{"/images/pictos/PICTO-NANTES-01.png"| relative_url}}"  height="17px"/>
                         <br/> 9 Rue du Chapeau Rouge, 44000 Nantes</a>
                 </div>
 
