--- a/_includes/formateur.html
+++ b/_includes/formateur.html
@@ -1,7 +1,7 @@
 <div class="row biographie">
     <div class="col-md-2">
         <div class="course-image">
-            <img width="150" height="150" src="{{ page.formateur_img | relative_url}}">
+            <img width="150" height="150" src="{{ include.img_formateur | relative_url}}">
         </div>
     </div>
     <div class="col-md-10">
