--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,7 +122,7 @@
                         <div id="map-legend">
                             <h3>WeScale</h3>
                             <p>23 rue Taitbout<br/>75009 Paris</a></p>
-                            <p><img src="{{ "/images/metro.jpg" | relative_url }}" width="25px" height="17px"/> Chaussée d'Antin Lafayette, Auber, Richelieu - Drouot, Opéra</p>
+                            <p><img alt="Métro proche" src="{{ "/images/metro.jpg" | relative_url }}" width="25px" height="17px"/> Chaussée d'Antin Lafayette, Auber, Richelieu - Drouot, Opéra</p>
                         </div>
                     </div>
 
@@ -137,7 +137,7 @@
             <div class="col-xs-6 col-lg-6 col-md-6">
                 <div class="footer-top">
                     <a href="#" class="to-maps">
-                        <img src="{{"/images/pictos/PICTO-PARIS-02.png"| relative_url}}" height="40px"/>
+                        <img alt="Paris" src="{{"/images/pictos/PICTO-PARIS-02.png"| relative_url}}" height="40px"/>
                         <br/> 23 rue Taitbout, 75009 Paris</a>
                 </div>
 
@@ -145,7 +145,7 @@
             <div class="col-xs-6 col-lg-6 col-md-6">
                 <div class="footer-top">
                     <a href="#" class="to-maps">
-                        <img src="{{"/images/pictos/PICTO-NANTES-01.png"| relative_url}}"  height="40px"/>
+                        <img alt="Nantes" src="{{"/images/pictos/PICTO-NANTES-01.png"| relative_url}}"  height="40px"/>
                         <br/> 9 Rue du Chapeau Rouge, 44000 Nantes</a>
                 </div>
 
