--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 <!--
     <link href="{{ "/css/bootstrap.min.css" | relative_url }}" rel="stylesheet">
 -->
-    <link href="{{ "/css/style.css" | relative_url }}" rel="stylesheet">
+    <link href="{{ "/css/style-dist.css" | relative_url }}" rel="stylesheet">
 
 
     <link rel="stylesheet" type="text/css"
