Add Twitter card and account

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@yeswescale" />
+    <meta name="twitter:creator" content="@yeswescale" />
+    <meta property="og:url" content="https://www.wescale.fr" />
+    <meta property="og:title" content="Tout savoir sur WeScale" />
+    <meta property="og:description" content="Créée en 2015, WeScale est une société de services spécalisée sur le Cloud et guidée par la culture DevOps. Nous intervenons en conseils, réalisations et formations." />
+    <meta property="og:image" content="http://graphics8.nytimes.com/images/2011/https://media-exp1.licdn.com/dms/image/C4D1BAQHmd9accCyr7A/company-background_10000/0?e=1580814000&v=beta&t=hX1IZq82m7KteOJPQrA9Wx67TGjlhiEU-vxoM7Bo6kI" />
+
     {% if site.github %}
     <meta name="robots" content="noindex">
     {% else %}
