--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,9 @@
     <meta property="og:description" content="Créée en 2015, WeScale est une société de services spécalisée sur le Cloud et guidée par la culture DevOps. Nous intervenons en conseils, réalisations et formations." />
     <meta property="og:image" content="http://graphics8.nytimes.com/images/2011/https://media-exp1.licdn.com/dms/image/C4D1BAQHmd9accCyr7A/company-background_10000/0?e=1580814000&v=beta&t=hX1IZq82m7KteOJPQrA9Wx67TGjlhiEU-vxoM7Bo6kI" />
 
+    {% if page.meta_desc %}
+    <meta name="description" content="{{page.meta_desc}}">
+    {% endif %}
     {% if site.github %}
     <meta name="robots" content="noindex">
     {% else %}
