Improve social links for SEO

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,15 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@yeswescale" />
     <meta name="twitter:creator" content="@yeswescale" />
+    <meta name="twitter:image" content="https://media-exp1.licdn.com/dms/image/C4D1BAQHmd9accCyr7A/company-background_10000/0?e=1580814000&v=beta&t=hX1IZq82m7KteOJPQrA9Wx67TGjlhiEU-vxoM7Bo6kI">
+    <meta name="twitter:title" content="Tout savoir sur WeScale">
+    <meta name="twitter:description" content="Créée en 2015, WeScale est une société de services spécalisée sur le Cloud et guidée par la culture DevOps. Nous intervenons en conseils, réalisations et formations.">
     <meta property="og:url" content="https://www.wescale.fr" />
+    <meta property="og:site_name" content="Wescale" />
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="Tout savoir sur WeScale" />
     <meta property="og:description" content="Créée en 2015, WeScale est une société de services spécalisée sur le Cloud et guidée par la culture DevOps. Nous intervenons en conseils, réalisations et formations." />
-    <meta property="og:image" content="http://graphics8.nytimes.com/images/2011/https://media-exp1.licdn.com/dms/image/C4D1BAQHmd9accCyr7A/company-background_10000/0?e=1580814000&v=beta&t=hX1IZq82m7KteOJPQrA9Wx67TGjlhiEU-vxoM7Bo6kI" />
+    <meta property="og:image" content="https://media-exp1.licdn.com/dms/image/C4D1BAQHmd9accCyr7A/company-background_10000/0?e=1580814000&v=beta&t=hX1IZq82m7KteOJPQrA9Wx67TGjlhiEU-vxoM7Bo6kI" />
 
     {% if page.meta_desc %}
     <meta name="description" content="{{page.meta_desc}}">
