Optimize rescaled images Fix uris for redirects

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -187,7 +187,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.0/jquery.scrollTo.min.js"></script>
 <script type="text/javascript" src="{{"/js/bootstrap.min.js" | relative_url }}"></script>
 <script type = "text/javascript" src = "//maps.googleapis.com/maps/api/js?key=AIzaSyB-UJFheAfpcnYrOXJeDe3EfiTzm9cfRFU" ></script>
-<script src="//momentjs.com/downloads/moment.min.js"></script>
+<script src="{{"/js/moment.min.js" | relative_url }}"></script>
 <script src="{{"/js/notify.min.js" | relative_url}}"></script>
 <script type = "text/javascript">
 if (typeof jQuery === 'undefined') {
@@ -339,7 +339,7 @@ if (typeof jQuery === 'undefined') {
 (function () {
     d = document;
     s = d.createElement("script");
-    s.src = "https://client.crisp.im/l.js";
+    s.src = "https://client.crisp.chat/l.js";
     s.async = 1;
     d.getElementsByTagName("head")[0].appendChild(s);
 })();</script>
