--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -162,7 +162,7 @@
                 <div class="footer-top">
                     <a href="#" class="to-maps">
                         <img alt="Nantes" src="{{"/images/pictos/PICTO-NANTES-01.png"| relative_url}}"  height="40px"/>
-                        <br/> 9 Rue du Chapeau Rouge, 44000 Nantes</a>
+                        <br/> 3 Rue Columelle, 44000 Nantes</a>
                 </div>
 
             </div>
