Switch target to _blank for navigation to blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -103,7 +103,7 @@
                 <li><a href="{{ "/contact.html"| relative_url }}">Nous contacter</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="http://blog.wescale.fr/">Le Blog</a></li>
+                <li><a href="http://blog.wescale.fr/" target="_blank">Le Blog</a></li>
                 <li class="socials">
                     <a href="https://twitter.com/yeswescale" title="Twitter" target="_blank"><i class="fab fa-twitter"
                                                                                 aria-hidden="true"></i></a>
